# Python

python_00/ex0/: ft_hello_garden.py
python_00/ex1/: ft_plot_area.py
python_00/ex2/: ft_harvest_total.py
python_00/ex3/: ft_plant_age.py
python_00/ex4/: ft_water_reminder.py
python_00/ex5/: ft_count_harvest_recursive.py
python_00/ex7/: ft_seed_inventory.py
python_01/ex0/: ft_garden_intro.py
python_01/ex1/: ft_garden_data.py
python_01/ex2/: ft_plant_growth.py
python_01/ex3/: ft_plant_factory.py
python_01/ex4/: ft_garden_security.py
python_01/ex5/: ft_plant_types.py
python_01/ex6/: ft_garden_analytics.py  test.py
python_02/ex0/: ft_first_exception.py
python_02/ex1/: ft_different_errors.py
python_02/ex2/: ft_custom_errors.py
python_02/ex3/: ft_finally_block.py
python_02/ex4/: ft_raise_errors.py
python_02/ex5/: ft_garden_management.py
python_03/ex0/: ft_command_quest.py
python_03/ex1/: ft_score_analytics.py
python_03/ex2/: ft_coordinate_system.py
python_03/ex3/: ft_achievement_tracker.py
python_03/ex4/: ft_inventory_system.py
python_03/ex5/: ft_data_stream.py
python_03/ex6/: ft_analytics_dashboard.py
python_04/: sample_data.json
python_04/ex0/: ft_ancient_text.py
python_04/ex1/: ft_archive_creation.py
python_04/ex2/: ft_stream_management.py
python_04/ex3/: ft_vault_security.py
python_04/ex4/: ft_crisis_response.py
python_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python_08/ex1/: loading.py  pyproject.toml  requirements.txt
python_10/: test.py
(+37 files in other folders)
