[project]
name = "loading"
version = "1.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.1.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "matplotlib (>=3.7.2)",
    "requests (>=2.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
